--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,7 @@
   </script>
 
   <script src="/socket.io/socket.io.js"></script>
+  <script data-main='js/main' src='js/lib/require-jquery.js'></script>
   <script type="text/javascript">
     var notes = new APP.Collections.NoteCollection();
     var router = new APP.Routers.NoteRouter({notes: notes});
