modified to work with require

--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,7 @@
   <!-- load the bootstrap stylesheet -->
   <link href="css/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" />
   <link href="css/bootstrap-responsive.min.css" media="all" rel="stylesheet" type="text/css" />
-  <link href="css/overrides.css" media="all" rel="stylesheet" type="text/css" />
-  <!-- load the libraries we need -->
-  <script type="text/javascript" src="js/libs/jquery.min.js"></script>
-  <script type="text/javascript" src="js/libs/underscore.min.js"></script>
-  <script type="text/javascript" src="js/libs/backbone.min.js"></script>
-  <script type="text/javascript" src="js/libs/bootstrap.min.js"></script>
-  <!-- load our scripts -->
-  <script type="text/javascript" src="js/socket_sync.js"></script>
-  <script type="text/javascript" src="js/note_router.js"></script>
-  <script type="text/javascript" src="js/models/note_model.js"></script>
-  <script type="text/javascript" src="js/views/note_index.js"></script>
-  <script type="text/javascript" src="js/views/note_row.js"></script>
-  <script type="text/javascript" src="js/views/note_new.js"></script>
-  <script type="text/javascript" src="js/views/note_edit.js"></script>
-  <script type="text/javascript" src="js/views/note_show.js"></script>
+  <link href="css/overrides.css" media="all" rel="stylesheet" type="text/css" />  
 </head>
 <body>
   <div id="wrap">
@@ -27,7 +13,7 @@
       <div class="page-header">
         <h1>Backbone.js Example App</h1>
       </div>
-      <p class="lead">As simple as possible backbone app. Does not even communicate with a server. Mostly just displaying how to wire up the classes, and listen to events.</p>
+      <p class="lead">As simple as possible backbone app. Mostly just displaying how to wire up the classes, and listen to events.</p>
 
       <div id="primary-content">
         <!-- the container that gets populated with the index -->
@@ -97,37 +83,11 @@
     <p style="white-space:pre-wrap;"><%= description %></p>
   </script>
 
-  <script src="/socket.io/socket.io.js"></script>
+  <!--
+		Il faudrait inclure socket.io ici si on l'utilisait
+		
+		<script src="/socket.io/socket.io.js"></script>
+	-->
   <script data-main='js/main' src='js/lib/require-jquery.js'></script>
-  <script type="text/javascript">
-    var notes = new APP.Collections.NoteCollection();
-    var router = new APP.Routers.NoteRouter({notes: notes});
-	
-	//Backbone.sync = APP.createSync(io.connect());
-
-    Backbone.history.start();
-    // we manually pass in the initial data, but this would be called with a collection.fetch() normally
-    notes.reset([
-                  {
-                    "title": "Example Note 1",
-                    "id": "45",
-                    "author": "David Morrow",
-                    "description": "Pinterest biodiesel excepteur, ad etsy gluten-free semiotics ennui before they sold out irony ut deserunt jean shorts. Dreamcatcher synth echo park assumenda aute. Street art +1 lomo raw denim, DIY fanny pack wayfarers butcher typewriter banh mi in pitchfork mumblecore eiusmod. Pop-up single-origin coffee cosby sweater flexitarian. Fugiat sustainable irony thundercats flexitarian aliquip. Butcher assumenda fugiat aute bespoke ea, magna consectetur duis est viral salvia excepteur. Ea four loko ad brooklyn mumblecore.\n\nPBR small batch direct trade ea. Cosby sweater reprehenderit high life put a bird on it banksy sunt. Shoreditch minim deserunt accusamus, portland four loko bushwick nulla. +1 nulla do pariatur post-ironic nostrud food truck sustainable. Adipisicing direct trade tofu etsy williamsburg, eiusmod cupidatat ut. Jean shorts fixie mlkshk brunch. Ad yr sapiente laborum."
-                  },
-                  {
-                    "title": "Example Note 2",
-                    "id": "48",
-                    "author": "David Morrow",
-                    "description": "Fixie synth quinoa umami single-origin coffee master cleanse sartorial typewriter bushwick ennui readymade, lomo trust fund. Shoreditch direct trade fap cray high life swag, viral cred lo-fi locavore fingerstache wayfarers freegan. Post-ironic gentrify swag, vegan raw denim beard letterpress lomo portland vice gastropub echo park brunch kogi ethnic. Cray truffaut freegan fingerstache craft beer readymade. Sartorial small batch VHS lomo, freegan mcsweeney's butcher williamsburg etsy leggings sustainable tofu. Four loko terry richardson narwhal, fixie beard fanny pack fap ennui umami sustainable readymade iphone. Bushwick keffiyeh street art, next level small batch skateboard you probably haven't heard of them occupy cray cosby sweater.\n\nFap ethnic before they sold out, 3 wolf moon narwhal iphone whatever messenger bag irony master cleanse gastropub umami godard next level high life. Fingerstache narwhal sustainable, yr freegan vegan pitchfork art party small batch raw denim helvetica scenester cred. Occupy carles fap, vegan high life pitchfork readymade tattooed wayfarers VHS bushwick. Gastropub sriracha occupy, semiotics direct trade terry richardson cardigan raw denim wes anderson. Etsy ennui mcsweeney's, put a bird on it blog terry richardson fanny pack messenger bag mustache you probably haven't heard of them bushwick sartorial iphone kogi fap. Aesthetic letterpress artisan selvage, williamsburg tumblr banksy typewriter vice salvia blog. Typewriter mixtape cray trust fund, truffaut retro polaroid forage."
-                  },
-                  {
-                    "title": "Example Note 3",
-                    "id": "52",
-                    "author": "David Morrow",
-                    "description": "You probably haven't heard of them keffiyeh lo-fi, yr bespoke selvage cray polaroid beard. Tofu messenger bag sustainable gastropub, gentrify lomo godard PBR echo park fap yr. Small batch truffaut swag forage tofu shoreditch street art helvetica. Hella helvetica fixie godard forage art party lo-fi. Street art gluten-free keffiyeh, chillwave whatever synth gastropub fap williamsburg locavore organic godard. Mlkshk authentic raw denim aesthetic, keytar trust fund hella godard scenester DIY skateboard whatever pork belly Austin. Keffiyeh forage wes anderson, viral farm-to-table iphone wayfarers messenger bag marfa bushwick bicycle rights banh mi fixie selvage."
-                  }
-                ]
-              );
-  </script>
 </body>
 </html>
