added error handling

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,8 @@
                     <button class="save btn btn-large btn-primary" type="submit">Save</button>
                     or
                     <a href="#notes/index" class="btn btn-large">Cancel</a>
+                    <img src="img/ajax-loader.gif" class="loader" style="display: none" />
+                    <span class="error text-error" style="display: none" >An error has occured</span>
                 </div>
             </form>
         </div>
